--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
